--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.9",
+    "@types/react": "18.2.32",
+    "typescript": "5.2.2"
   }
 }
